tests/conformance/parse/valid/extern_type_decl.ks
extern type HashMap = jvm("java.util.HashMap")
export extern type StringBuilder = jvm("java.lang.StringBuilder")
