tests/conformance/parse/invalid/extern_type_missing_jvm_wrapper.ks
// EXPECT: Expected jvm("...") in extern type declaration
extern type HashMap = "java.util.HashMap"
